--- a/source/Data/scss/config.scss
+++ b/source/Data/scss/config.scss
@@ -195,19 +195,19 @@ kbd {
 	padding-top: 40px;
 	margin: 0;
 	background: $fakeBlurColor;
-	text-shadow: 0 0 100px 2px $black;
 	overflow: hidden;
 	li {
 		@include oneLineControlsHeight (60px);
 		margin: 0;
 		width: $leftMenuWidth;
 		font-weight: 100;
+		text-shadow: 0 0 40px $black, 0 0 80px $black;
 		&.active {
 			a {
-				font-weight: 400;
+				font-weight: 600;
 				color: $blue;
 				font-size: 1.4em;
-				text-shadow: 0 0 40px 4px $blueShadow;
+				text-shadow: 0 0 30px $blue, 0 0 80px $blue;
 				cursor: default;
 				&:hover {
 					box-shadow: none;
@@ -232,24 +232,29 @@ kbd {
 }
 
 #exitApp {
-	@include oneLineControlsHeight ($oneLineControlsHeight);
+	@include oneLineControlsHeight (40px);
+	width: 40px;
 	font-size: 1.2em;
 	font-weight: 100;
 	position: absolute;
 	right: 0;
 	top: 0;
-	width: $oneLineControlsHeight;
 	text-align: center;
 	padding: 0;
 	z-index: 99;
-	a {
-		display: block;
-		height: 100%;
-		color: #5E5E5E;
-		&:hover {
-			text-shadow: 0 0 100px 30px $red;
+	&:hover {
+		a {
 			color: $red;
+			background-color: rgba(232, 17, 35, 0.19);
+			border-radius: $oneLineControlsHeight/2;
+			box-shadow: 0 0 160px 0 $red, 0 0 100px 0 $red;
 		}
+	}
+	a {
+		position: relative;
+		display: block;
+		height: 40px;
+		color: $fontColor;
 	}
 }
 
@@ -529,7 +534,40 @@ input[type=checkbox].select {
 		&+div {
 			height: 0;
 			overflow: hidden;
-			
+			h4 {
+				display: block;
+				clear: both;
+				margin: {
+					top: 10px;
+					bottom: 10px;
+				}
+			}
+			#psCCList,
+			#psCSList,
+			#psOLDList {
+				label {
+					@include borderNormal;
+					@include oneLineControlsHeight(40px);
+					margin: {
+						right: 10px;
+						bottom: 10px;
+					}
+					padding: {
+						left: 10px;
+						right: 10px;
+					}
+					min-width: 80px;
+					text-align: center;
+					float: left;
+					cursor: pointer;
+					&.curPsVer {
+						background-color: $blue;
+						border-width: 0;
+						color: $white;
+						cursor: default;
+					}
+				}
+			}
 		}
 	}
 	&:checked {
@@ -562,36 +600,6 @@ input[type=checkbox].select {
 				height: 410px;
 				overflow: hidden;
 				transition: height 0.3s ease;
-				h4 {
-					display: block;
-					clear: both;
-					margin: {
-						top: 10px;
-						bottom: 10px;
-					}
-				}
-				label {
-					@include borderNormal;
-					@include oneLineControlsHeight(40px);
-					min-width: 80px;
-					text-align: center;
-					margin: {
-						right: 10px;
-						bottom: 10px;
-					}
-					padding: {
-						left: 10px;
-						right: 10px;
-					}
-					float: left;
-					cursor: pointer;
-					&#curPsVer {
-						background-color: $blue;
-						border-width: 0;
-						color: $white;
-						cursor: default;
-					}
-				}
 			}
 		}
 	}
