--- a/source/Data/scss/config.scss
+++ b/source/Data/scss/config.scss
@@ -389,8 +389,8 @@ div.hotkey {
 	}
 }
 
-ul#supportList {
-	li {
+#supportList {
+	&>li {
 		@include oneLineControlsHeight ($oneLineControlsHeight);
 		padding: {
 			top: 10px;
@@ -409,67 +409,70 @@ ul#supportList {
 		&:hover {
 			background-color: $fakeBlurColor;
 		}
-		img {
+		&>img {
 			float: left;
 			width: $oneLineControlsHeight;
 			max-width: $oneLineControlsHeight;
 			max-height: $oneLineControlsHeight;
 		}
-		h3 {
+		&>h3 {
 			float: left;
 			margin-left: 10px;
 		}
-		&#donate {
-			height: auto;
-			cursor: default;
-			#qrcode {
-				display: block;
-				position: static;
-				clear: both;
-				img {
-					width: $ControlsWidth;
-					max-width: $ControlsWidth;
-					max-height: $ControlsWidth;
-					margin: {
-						top: $oneLineControlsHeight;
-						left: $oneLineControlsHeight;
-						right: $oneLineControlsHeight;
-						bottom: 10px;
-					}
-					float: none;
-				}
-			}
+	}
+}
+
+#donate {
+	height: auto;
+	cursor: default;
+}
+
+#qrcode {
+	display: block;
+	position: static;
+	clear: both;
+	img {
+		width: $ControlsWidth;
+		max-width: $ControlsWidth;
+		max-height: $ControlsWidth;
+		margin: {
+			top: $oneLineControlsHeight;
+			left: $oneLineControlsHeight;
+			right: $oneLineControlsHeight;
+			bottom: 10px;
 		}
-		&#githubButton {
-			div {
-				@include borderNormal;
-				@include oneLineControlsHeight (26px);
-				font: {
-					size: 12px;
-					weight: 600;
-				}
-				background: {
-					image: linear-gradient(to bottom, #FAFBFC, #E4EBF0);
-					repeat: repeat-x;
-					size: 110% 110%;
-					color: #EFF3F6;
-				}
-				margin-left: 1em;
-				color: #24292E;
-				text-decoration: none;
-				outline: 0;
-				vertical-align: middle;
-				width: $oneLineControlsHeight;
-				padding: 0 10px;
-				display: inline-block;
-				svg {
-					fill: #24292E;
-					height: 16px;
-					position: relative;
-					top: 4px;
-				}
-			}
+		float: none;
+	}
+}
+
+#githubButton {
+	div {
+		@include borderNormal;
+		@include oneLineControlsHeight (26px);
+		font: {
+			size: 12px;
+			weight: 600;
 		}
+		background: {
+			image: linear-gradient(to bottom, #FAFBFC, #E4EBF0);
+			repeat: repeat-x;
+			size: 110% 110%;
+			color: #EFF3F6;
+		}
+		margin-left: 1em;
+		color: #24292E;
+		text-decoration: none;
+		outline: 0;
+		vertical-align: middle;
+		width: $oneLineControlsHeight;
+		padding: 0 10px;
+		display: inline-block;
+	}
+	svg {
+		fill: #24292E;
+		height: 16px;
+		position: relative;
+		top: 4px;
 	}
 }
 
@@ -527,10 +530,15 @@ input[type=checkbox].select {
 	position: absolute;
 	left: -9999px;
 	&+label {
-		@extend input;
+		@include borderNormal;
+		@include oneLineControlsHeight ($oneLineControlsHeight);
+		margin-bottom: 10px;
+		font-size: 1em;
+		box-sizing: border-box;
 		display: block;
 		text-align: center;
 		cursor: pointer;
+		background-color: transparent;
 		&+div {
 			height: 0;
 			overflow: hidden;
@@ -540,32 +548,6 @@ input[type=checkbox].select {
 				margin: {
 					top: 10px;
 					bottom: 10px;
-				}
-			}
-			#psCCList,
-			#psCSList,
-			#psOLDList {
-				label {
-					@include borderNormal;
-					@include oneLineControlsHeight(40px);
-					margin: {
-						right: 10px;
-						bottom: 10px;
-					}
-					padding: {
-						left: 10px;
-						right: 10px;
-					}
-					min-width: 80px;
-					text-align: center;
-					float: left;
-					cursor: pointer;
-					&.curPsVer {
-						background-color: $blue;
-						border-width: 0;
-						color: $white;
-						cursor: default;
-					}
 				}
 			}
 		}
@@ -585,8 +567,8 @@ input[type=checkbox].select {
 			z-index: 1;
 			border-width: 0;
 			border-radius: 0;
-			background-color: rgba(255, 255, 255, 0.8);
-			transition: background 1s ease;
+			background-color: rgba(255, 255, 255, 0.9);
+			transition: background-color 1s ease;
 			&+div {
 				-webkit-box-shadow: 0 0 40px 0 rgba(0, 0, 0, 0.3);
 				-moz-box-shadow: 0 0 40px 0 rgba(0, 0, 0, 0.3);
@@ -600,6 +582,40 @@ input[type=checkbox].select {
 				height: 410px;
 				overflow: hidden;
 				transition: height 0.3s ease;
+			}
+		}
+	}
+}
+
+#psCCList,
+#psCSList,
+#psOLDList {
+	label {
+		@include borderNormal;
+		@include oneLineControlsHeight(40px);
+		margin: {
+			right: 10px;
+			bottom: 10px;
+		}
+		padding: {
+			left: 10px;
+			right: 10px;
+		}
+		min-width: 80px;
+		text-align: center;
+		float: left;
+		cursor: pointer;
+		&:hover {
+			border-color: $blue;
+			color: $blue;
+		}
+		&.curPsVer {
+			background-color: $blue;
+			border-width: 0;
+			color: $white;
+			cursor: default;
+			&:hover {
+				color: $white;
 			}
 		}
 	}
